--- a/Rozetka.PriceTracker/Rozetka.PriceTracker.Web/ClientApp/src/app/components/dashboard/product/product.component.css
+++ b/Rozetka.PriceTracker/Rozetka.PriceTracker.Web/ClientApp/src/app/components/dashboard/product/product.component.css
@@ -36,11 +36,43 @@
     line-height: 19px;
 }
 
-.unavailable{
+.unavailable {
     opacity: 0.5;
 }
 
-.unavailable .price{
+.unavailable .price {
     color: black;
     text-decoration: line-through;
+}
+
+.remove {
+    border: 3px solid rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    top: 0px;
+    float: right;
+    margin-top: -100%;
+    width: 20px;
+    height: 20px;
+    top: -20px;
+    vertical-align: middle;
+    text-align: center;
+    line-height: 20px;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.remove:hover {
+    cursor: pointer;
+    border: 3px solid rgba(0, 0, 0, 0.7);
+}
+
+.remove-sign {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    vertical-align: middle;
+    margin-top: -20%;
 }
